WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217628
Calling AudioContext.resume() right after AudioContext.suspend() should not be a no-op
https://bugs.webkit.org/show_bug.cgi?id=217628
Summary
Calling AudioContext.resume() right after AudioContext.suspend() should not b...
Chris Dumez
Reported
2020-10-12 12:20:14 PDT
Calling AudioContext.resume() right after AudioContext.suspend() should not be a no-op.
Attachments
Patch
(8.82 KB, patch)
2020-10-12 12:24 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-10-12 12:24:32 PDT
Created
attachment 411144
[details]
Patch
EWS
Comment 2
2020-10-12 14:03:00 PDT
Committed
r268368
: <
https://trac.webkit.org/changeset/268368
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411144
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-12 14:03:29 PDT
<
rdar://problem/70222667
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug