Calling AudioContext.resume() right after AudioContext.suspend() should not be a no-op https://bugs.webkit.org/show_bug.cgi?id=217628

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/webaudio/the-audio-api/the-audioworklet-interface/process-parameters.https-expected.txt:

Source/WebCore:

We had an issue with our implementation of AudioContext's suspend() / resume(). Both functions
would update the AudioContext's state asynchronously (as per specification [1][2]) but would
check the state syncronously and return early if the state is already as expected (which is
not as per specification). This meant that calling suspend() then resume() right away would
leave the context suspended instead of running.

[1] https://www.w3.org/TR/webaudio/#dom-audiocontext-suspend
[2] https://www.w3.org/TR/webaudio/#dom-audiocontext-resume

No new tests, rebaselined existing test.

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::setState):
(WebCore::BaseAudioContext::suspendRendering):
(WebCore::BaseAudioContext::resumeRendering):

LayoutTests:

* TestExpectations:
Unskip test that is no longer timing out.

* webaudio/audiocontext-promise-expected.txt:
* webaudio/audiocontext-promise.html:
Udpate existing layout test to reflect behavior change.


Canonical link: https://commits.webkit.org/230377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268368 268f45cc-cd09-0410-ab3c-d52691b4dbfc